Add game detail / routing OMGOMGOMG

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Game Card Micron Finder</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700" rel="stylesheet">
   </head>
   <body>
     <noscript>
