Add from evans repo

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Game Card Micron Finder</title>
+    <title>SleeveDB</title>
 
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700" rel="stylesheet">
   </head>
